syntax = "proto3";// 协议为proto3
package proto;
option go_package = "./";

message SearchRequest {
    string request = 1;
}

message SearchResponse {
    string response = 1;
}

service SearchService {
    rpc Search(SearchRequest) returns (SearchResponse) {}
}